# ConsoleCardGame

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml  code_gen.yml
GoogleTest/: CMakeLists.txt  multiply_string_test.cpp  replace_chars_test.cpp  split_test.cpp  strip_test.cpp
GoogleTest/client_tests/: CMakeLists.txt  card_test.cpp  generated_card_test.cpp
GoogleTest/core_tests/: CMakeLists.txt
GoogleTest/core_tests/config_tests/: CMakeLists.txt  ConfParserTest.cpp  general.cfg
GoogleTest/core_tests/util_tests/: CMakeLists.txt  multiply_string_test.cpp  replace_chars_test.cpp  split_test.cpp  strip_test.cpp
GoogleTest/util_tests/: CMakeLists.txt  multiply_string_test.cpp  replace_chars_test.cpp  split_test.cpp  strip_test.cpp
client/: CMakeLists.txt  client_sender.cpp  client_sender.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h
core/: CMakeLists.txt  board.cpp  board.h  card.cpp  card.h  session.cpp  session.h  user.cpp  user.h
core/card_types/: CMakeLists.txt  buff_card.cpp  buff_card.h  card.cpp  card.h  card_type.cpp  card_type.h  damage_card.cpp  damage_card.h  recovery_card.cpp  recovery_card.h  unit_card.cpp  unit_card.h
core/card_types/cards_gen/: CMakeLists.txt  card_gen.cpp  card_gen.h  card_gen.sql  generate_all_classes.py  generate_cmake.py  generate_header.py  generate_source.py  main.cpp  main.py  utils.py
core/card_types/generated_cards/: CMakeLists.txt  all_generated_classes.cpp  all_generated_classes.h  damage.cpp  damage.h  recovery.cpp  recovery.h  unit.cpp  unit.h
core/configurations/: CMakeLists.txt  README.md  all_configs.cpp  all_configs.h  conf_parser.cpp  conf_parser.h  general.cfg
core/utils/: colours_define.h  custom_deque.cpp  custom_deque.h  path_manip.cpp  path_manip.h  string_assist.cpp  string_assist.h
server/: CMakeLists.txt  com_handler.cpp  com_handler.h  main.cpp  server.cpp  server.h
